Fix go back button overlap

--- a/event/static-assets/css/style.css
+++ b/event/static-assets/css/style.css
@@ -618,8 +618,8 @@ footer {
 /* Back top */
 .go-top {
   background-color: #222;
-  bottom: 2em;
-  right: 2em;
+  bottom: 1em;
+  right: 1em;
   color: #ffffff;
   font-size: 32px;
   display: none;
